Correct dashboard style

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -172,13 +172,13 @@
                     <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height" style="display: grid; grid-template-columns: repeat(3, calc(1/3  * 100%)); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
-                    <div style="grid-area: 1 / 1 / 2 / 2;">
+                    <div style="grid-area: 1 / 1 / 2 / 2;" class="full-height">
                       <canvas id="chart7-1"></canvas>
                     </div>
-                    <div style="grid-area: 1 / 2 / 2 / 3;">
+                    <div style="grid-area: 1 / 2 / 2 / 3;" class="full-height">
                       <canvas id="chart7-2"></canvas>
                     </div>
-                    <div style="grid-area: 1 / 3 / 2 / 4;">
+                    <div style="grid-area: 1 / 3 / 2 / 4;"  class="full-height">
                       <canvas id="chart7-3"></canvas>
                     </div>
                   </div>
