Update date format

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
     <script src="{{ url_for('static', filename='libs/chart.js') }}"></script>
     <script src="{{ url_for('static', filename='libs/chartjs-chart-geo.js') }}"></script>
+
+    <!-- Page title -->
+    <title>SUMOT - Dashboard</title>
+
+    <!-- Page favicon -->
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
   </head>
   <body>
     <div ng-app="ods-widgets">
