--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -39,7 +39,7 @@
                   <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs=[{'$match': {}}]">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$match": {}}]''>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -58,7 +58,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Logs&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -77,7 +77,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Logs&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -107,7 +107,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Logs&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -126,7 +126,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Logs&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -145,7 +145,7 @@
                   <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Logs&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -164,7 +164,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Logs&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
@@ -191,7 +191,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params="title=Présences&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params="title=Logs&collection=logs&aggs='PIPELINE'">Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
