--- a/app/templates/table.html
+++ b/app/templates/table.html
@@ -119,7 +119,7 @@
       let maxSizeColumns = columns.map(col => col.length);
       data.forEach(line => {
         Object.values(line).forEach((elmt, index) => {
-          maxSizeColumns[index] = Math.max(maxSizeColumns[index], elmt.length);
+          maxSizeColumns[index] = Math.max(maxSizeColumns[index], elmt ? elmt.length : 0);
         });
       })
       
@@ -129,6 +129,7 @@
 
         let i = 0;
         Object.values(line).forEach(elmt => {
+          elmt = elmt == null ? "" : elmt;
           const td = document.createElement("td");
           td.className = i == 0 ? "px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900" : "px-6 py-4 whitespace-nowrap text-sm text-gray-500";
           if (typeof elmt === "boolean"){
