--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -49,7 +49,7 @@
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title">Nombre d'utilisateurs quotidiens</h3>
+                    <h3 class="title">Nombre d'utilisateurs quotidiens uniques</h3>
                     <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height">
@@ -117,7 +117,7 @@
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title">Répartition des temps pour trouver le mot en mode solo</h3>
+                    <h3 class="title">Répartition des temps pour trouver le mot mode solo</h3>
                     <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height">
@@ -136,7 +136,7 @@
                 <div class="box flat content skeleton request" aria-txt="txt-cell2" aria-params='collection=logs&aggs=[{"$match": {"mode": "solo", "success": true}}, {"$group": {"_id": {"$avg": "$time"}}}]' aria-func="formatTimespan"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top text-cell">
-                    <h3 class="title"> Temps moyen </h3>
+                    <h3 class="title"> Temps moyen mode solo </h3>
                     <p class="description"> en 2012 </p>
                   </div>
                   <div class="advanced-kpi--middle centered text-cell">
@@ -174,7 +174,7 @@
                 <div class="box flat content skeleton"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
-                    <h3 class="title">Evolution du nombre d'utilisateurs</h3>
+                    <h3 class="title">Evolution du nombre de parties /h3>
                     <p class="description">Du 18 au 24 mars 2025</p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height" style="display: grid; grid-template-columns: repeat(3, calc(1/3  * 100%)); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
