--- a/app/templates/versusia.html
+++ b/app/templates/versusia.html
@@ -269,7 +269,7 @@
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify(Object.assign({
-                    mode  : "solo",
+                    mode  : "ai",
                     word  : real_word,
                     time : Date.now()   - TIME_START,
                     difficulty : difficultyVal
