--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -39,7 +39,7 @@
                   <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date">Mar 22, 2017</span>
-                      <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$match": {}}]''>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"time":1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
