--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -38,7 +38,7 @@
                   </div>
                   <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
+                      <span class="date dateNow"></span>
                       <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"timestamp":-1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
@@ -57,7 +57,7 @@
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
+                      <span class="date dateNow"></span>
                       <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"timestamp":-1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
@@ -69,14 +69,14 @@
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title">Répartition des utilisateurs dans le monde</h3>
-                    <p class="description">Du 18 au 24 mars 2025</p>
+                    <p class="description" id="chart2-desc"></p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height">
                     <canvas id="chart2"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
+                      <span class="date dateNow"></span>
                       <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"timestamp":-1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
@@ -88,7 +88,7 @@
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title">Taux de victoire</h3>
-                    <p class="description">Du 18 au 24 mars 2025</p>
+                    <p class="description"  id="chart4-desc"></p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height" style="display: grid; grid-template-columns: repeat(4, 25%); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
                     <div style="grid-area: 1 / 1 / 2 / 2;" class="full-height">
@@ -106,7 +106,7 @@
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
+                      <span class="date dateNow"></span>
                       <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"timestamp":-1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
@@ -118,14 +118,14 @@
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title">Répartition des temps pour trouver le mot mode solo</h3>
-                    <p class="description">Du 18 au 24 mars 2025</p>
+                    <p class="description"  id="chart5-desc"></p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height">
                     <canvas id="chart5"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
+                      <span class="date dateNow"></span>
                       <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"timestamp":-1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
@@ -144,7 +144,7 @@
                   </div>
                   <div class="advanced-kpi--bottom text-cell">
                     <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
+                      <span class="date dateNow"></span>
                       <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"timestamp":-1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
@@ -156,14 +156,14 @@
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title">Nombre de partie par mode de jeu</h3>
-                    <p class="description">Du 18 au 24 mars 2025</p>
+                    <p class="description" id="chart6-desc"></p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height">
                     <canvas id="chart6"></canvas>
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
+                      <span class="date dateNow"></span>
                       <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"timestamp":-1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
@@ -190,7 +190,7 @@
                   </div>
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
-                      <span class="date">Mar 22, 2017</span>
+                      <span class="date dateNow"></span>
                       <a class="source modal-btn" aria-params='title=Logs&collection=logs&aggs=[{"$sort":{"timestamp":-1}},{"$project":{"_id":false}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
