--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -175,7 +175,7 @@
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top">
                     <h3 class="title">Evolution du nombre de parties </h3>
-                    <p class="description">Du 18 au 24 mars 2025</p>
+                    <p class="description" id="chart7-desc"></p>
                   </div>
                   <div class="advanced-kpi--middle no-bg mb-0 full-height" style="display: grid; grid-template-columns: repeat(3, calc(1/3  * 100%)); grid-template-rows: 1fr; grid-column-gap: 0px; grid-row-gap: 0px;">
                     <div style="grid-area: 1 / 1 / 2 / 2;" class="full-height">
