--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -133,7 +133,7 @@
                 </div>
               </div>
               <div style="grid-area: 4 / 3 / 5 / 4; aspect-ratio: 1;" class="box white flat" id="cell2">
-                <div class="box flat content skeleton request" aria-desc="cell2-desc" aria-txt="txt-cell2" aria-params='collection=logs&aggs=[{"$match": {"timestamp":{"$gte":"__DATEYEAR"}, "mode": "solo", "success": true}}, {"$match":{"mode":"solo","success":true}},{"$group":{"_id":null,"averageTime":{"$avg":"$time"}}},{"$project":{"_id":"$averageTime"}}]' aria-func="formatTimespan"></div>
+                <div class="box flat content skeleton request" aria-desc="cell2-desc" aria-txt="txt-cell2" aria-params='collection=logs&aggs=[{"$match": {"timestamp":{"$gte":"__DATEYEAR"}, "mode": "solo", "success": true}},{"$group":{"_id":null,"averageTime":{"$avg":"$time"}}},{"$project":{"_id":"$averageTime"}}]' aria-func="formatTimespan"></div>
                 <div class="advanced-kpi">
                   <div class="advanced-kpi--top text-cell">
                     <h3 class="title"> Temps moyen mode solo </h3>
