--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -77,7 +77,7 @@
                   <div class="advanced-kpi--bottom">
                     <div class="advanced-kpi--bottom-second-stage">
                       <span class="date dateNow"></span>
-                      <a class="source modal-btn" aria-params='title=Utilisateurs&collection=logs&aggs=[{"$match":{"timestamp":{"$gte":"__DATEYEAR"}}}, {"$sort":{"timestamp":1}},{"$group":{"_id":"$ip","firstCountry":{"$first":"$country"}}},{"$project":{"_id":0,"ip":"$_id","country":"$firstCountry"}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <a class="source modal-btn" aria-params='title=Utilisateurs&collection=logs&aggs=[{"$match":{"timestamp":{"$gte":"__DATEWEEK"}}}, {"$sort":{"timestamp":1}},{"$group":{"_id":"$ip","firstCountry":{"$first":"$country"}}},{"$project":{"_id":0,"ip":"$_id","country":"$firstCountry"}}]'>Source <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
                     </div>
                   </div>
