--- a/app/static/style.css
+++ b/app/static/style.css
@@ -368,6 +368,10 @@ header {
   margin: 1em auto;
   position: absolute;
   justify-self: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* Rules content */
